# web.evanchen.cc

./: .codespellrc  .gitignore  .gitmodules  .vale.ini  EXTDIRS  LICENSE  LICENSE.txt  PRIVACY.mkd  README.md  README.mkd  build.py  compile.sh  lint.sh  macros.py  nav_links.toml  page.html  prek.toml  pyproject.toml  rumdl.toml  setmeta.sh  sync.sh  tidyrc  update.fish
.github/workflows/: ci.yml  prek.yml  (+2 more)
applets/: arml2024PQ.html  ggbclean.html  homepage.html  kor.html  obs-clock.html
css/: extras.css  simple-53544.css
data/: EXTDIRS  macros.py  nav.toml  page.html  page.html.j2
elmo/: .gitignore  assemble.py
handouts/: .gitignore  sync.sh
input/: 1802.md  404.md  404.mkd  CV.md  CV.mkd  about.mkd  adt.mkd  asyguide.md  bashshell.mkd  blog.md  blog.mkd  boatis.md  coaches.md  coffee.mkd  contact.md  contact.mkd  coursework.md  coursework.mkd  cranks.md  discord.md  discord.mkd  elmo.md  elmo.mkd  excerpts.md  excerpts.mkd  facebook.mkd  faq-contest.md  faq-contest.mkd  faq-latex.md  faq-latex.mkd  faq-linux.md  faq-linux.mkd  faq-personal.md  faq-personal.mkd  faq-raqs.md  faq-raqs.mkd  faq-rules.md  faq-rules.mkd  faq-school.md  faq-school.mkd  (+69 more)
js/: blog.js  ga.js  trick.js
misc/: parallelogram-sols.md
scripts/: audit.py  broken-links.py  build.py  compile.sh  devserver.py  extract-twitch-writeups.py  freeze.sh  lint.sh  static.sh  sync.sh  thaw.sh  upload-twitch-tex-and-pdfs.sh  videos.sh
static/: .gitignore  CV-example-source-2020.tex  htsk.html  kor.html  opal-checker.js  random-hints.tex  trick.js  trick.min.js
twitch-data/: data.tsv  urls.json
(+150 files in other folders)
